--- a/build.yaml
+++ b/build.yaml
@@ -6,19 +6,20 @@
 # distinguish build outputs from each other:
 #
 # board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
+# shield: [ "floptard_left", "corne_right" ]
 # include:
 #   - board: bdn9_rev2
 #   - board: nice_nano_v2
 #     shield: reviung41
 #   - board: nice_nano_v2
-#     shield: corne_left
+#     shield: floptard_left
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
-#     artifact-name: corne_left_with_logging
+#     artifact-name: floptard_left_with_logging
 #
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: floptard_left
+
   - board: nice_nano_v2
-    shield: corne_right
+    shield: floptard_right
