Added unique game and qwerty layers.

--- a/config/boards/shields/floptard.conf
+++ b/config/boards/shields/floptard.conf
@@ -7,7 +7,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # Make USB lower latency
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6 # Default: 24, MIN: 6, 1.125ms units.
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=24 # Default: 40, MIN: 6, 1.125ms units.
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12 # Default: 40, MIN: 6, 1.125ms units.
 
 # Increase the transmit power
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
